[package]
name = "rtt-file-logger"
version = "0.1.0"
authors = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "rtt-file-logger logs data transmitted over probe-rs rtt to a file"
repository = "https://github.com/xd009642/rtt-file-logger"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.1"
probe-rs = "0.12.0"
probe-rs-rtt = "0.12.0"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
toml = "0.5.8"
